--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./app
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [8.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -17,8 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install app/package.json
+      - run: npm install
       - run: npm run build --if-present
-      - run: npm test
         env:
           CI: true
